[package]
name = "glume"
version = "0.7.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["opengl", "graphics", "gamedev"]
description = "A simple Windowing and OpenGL context creation framework."
repository = "https://github.com/blindley/glume"
readme = "README.md"

[dependencies]
glutin = "0.29.1"
gl = "0.14"
